Rework File Naming

--- a/eShoesDOM.html
+++ b/eShoesDOM.html
@@ -346,23 +346,11 @@
                     <script>
                         var shoes=xmlDom.getElementsByTagName("shoes");
                         var shoesLength=shoes.length;
-                        //SHOE - FIRST SHOES TYPE
-                        //var first_shoesType=shoes[0].getElementsByTagName("shoesType");
-                        //var shoesTypeLength=first_shoesType.length;
-                        //SHOE-FIRST SHOES TYPE-FIRST SHOES ID
-                        //var firstid=first_shoesType.getElementsByTagName("shoeId");
-                        //var firstidLength=firsid.length;
-
-                        //document.write(firstidLength);
-                        //document.write(shoesTypeLength);
-                        //document.write("Shoes Length: " + shoesLength+"<br/>");
 
                         //Count number of mens and women shoes
                         var men=0;
                         var women=0;
                         var total=0;
-
-       
 
                         for(var i=0 ; i<shoesLength ; i++)
                         {
@@ -553,7 +541,7 @@
             <a href="#myPage" title="To Top">
                 <span class="glyphicon glyphicon-chevron-up"></span>
             </a>
-            <p>Bootstrap Theme Made By <a href="https://www.w3schools.com" title="Visit w3schools">www.w3schools.com</a></p>
+            <p> &copy; 2019 XML Shoes Shop !! Ltd.</p>
         </footer>
 
         <script>
